k8s/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: angular-canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: angular-canary
  template:
    metadata:
      labels:
        app: angular-canary
    spec:
      containers:
        - name: angular-canary
          image: "vfjansen/angular-app-kube:v2" #vfjansen/angular-app-kube:v9
          resources:
            requests:
              cpu: "50m"
              memory: 10Mi
            limits:
              cpu: "75m"
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            failureThreshold: 30

          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            failureThreshold: 1
            initialDelaySeconds: 10

  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause:
            duration: 60s
        - setWeight: 60
        - pause:
            duration: 60s
        - setWeight: 80
        - pause:
            duration: 60s
