k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-canary
spec:
  selector:
    app: angular-canary
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
